# SAF

./: CMakeLists.txt  README.md  imgui.ini  saf.ini
cmake/: efsw.cmake  eigen3.cmake  glfw.cmake  imgui.cmake  lua.cmake  sol2.cmake  volk.cmake
examples/: CMakeLists.txt  demo.cpp  demo.cu  demo.cuh  random.hpp  test.hpp
examples/scripts/: test.lua
saf/: CMakeLists.txt
saf/app/: application.cpp  application.hpp  layer.hpp  parameter.cpp  parameter.hpp  settings.hpp
saf/core/: helpers.hpp  image.cpp  image.hpp  immediateSubmit.hpp  types.hpp  volk_impl.cpp  vulkanContext.cpp  vulkanContext.hpp  vulkanHelper.cpp  vulkanHelper.hpp  vulkanImage.hpp  vulkanSwapchain.cpp  vulkanSwapchain.hpp
saf/ui/: fontAwesome6RegularAndSolid.hpp  guiStyle.hpp  iconsFA6.hpp  imguiBackend.hpp  interVariableFont.hpp  log.hpp  ui_helper.hpp
